Added backend asp net project with basic authentication
